--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,48 @@
-# Dependencies
+# ScaleUp-Nvidia Project .gitignore
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+.venv/
+
+# Node.js
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+.npm
+.yarn-integrity
 
-# Production builds
-build/
-dist/
+# Next.js
 .next/
 out/
+build/
 
 # Environment variables
 .env
@@ -18,28 +51,30 @@ out/
 .env.test.local
 .env.production.local
 
-# IDE and editor files
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+scaleup_nvidia.db
+
+# IDE and Editor files
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
-
-# OS generated files
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
 # Logs
-logs
+logs/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Runtime data
-pids
+pids/
 *.pid
 *.seed
 *.pid.lock
@@ -84,6 +119,7 @@ jspm_packages/
 
 # Nuxt.js build / generate output
 .nuxt
+dist
 
 # Gatsby files
 .cache/
@@ -97,6 +133,58 @@ public
 tmp/
 temp/
 
-# TypeScript
+# Docker
+.dockerignore
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Windows
+*.lnk
+
+# JWT tokens and secrets
+*.pem
+*.key
+secrets.json
+
+# Backup files
+*.bak
+*.backup
+*.old
+
+# Test files
+test-results/
+coverage/
+.nyc_output/
+
+# Documentation build
+docs/_build/
+
+# Local configuration
+config.local.json
+settings.local.json
+
+# Additional project-specific files
+env.example
+database-schema.sql
+
+# Frontend-specific files (Next.js, pnpm, yarn, vercel)
+.pnp
+.pnp.*
+.pnpm-debug.log*
+.vercel
 *.tsbuildinfo
 next-env.d.ts
+
+# Yarn 2+ specific files
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
