--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,11 @@ services:
       - SECRET_KEY=dev-secret
       - ALGORITHM=HS256
       - ACCESS_TOKEN_EXPIRE_MINUTES=60
+      - REGISTRY_BASE_URL=http://host.docker.internal:7000
+      - PUBLIC_BASE_URL=http://localhost:8000
+      - SERVICE_ID=nvidia-ui-backend
+      - REGISTRY_RETRY_ATTEMPTS=3
+      - REGISTRY_RETRY_DELAY=1
     ports:
       - "8000:8000"
     depends_on:
